cmake_minimum_required(VERSION 3.15)
project(srcs C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(srcs
        accept_color.c
        accuracy.c
        char_pminus_space.c
        char_pregular_space.c
        convert.c
        convert_float.c
        convert_float_zero.c
        convert_hexadecimal_lcase.c
        convert_hexadecimal_upcase.c
        decimal_pplus_space.c
        decimal_pregular_space.c
        decimal_pregular_zero.c
        decimal_pspace_else.c
        decimal_pspace_if.c
        decimal_pzero.c
        decimal_simple_size.c
        find_percent.c
        flags.c
        float2.c
        free_list.c
        ft_atoi.c
        ft_itoa.c
        ft_itoa8.c
        ft_memset.c
        ft_power.c
        ft_printf.c
        ft_printf.h
        ft_putchar.c
        ft_putendl.c
        ft_putnbr.c
        ft_putnchar.c
        ft_putnstr.c
        ft_putstr.c
        ft_round.c
        ft_strcat.c
        ft_strcpy.c
        ft_strjoin.c
        ft_strlen.c
        ft_strnew.c
        hexadecimal_pregular_space.c
        len_after_dot.c
        minus2.c
        octal_pregular_space.c
        search_mistake.c
        search_type.c
        size.c
        type_char_minus_c.c
        type_char_minus_s.c
        type_char_priority.c
        type_char_regular_c.c
        type_char_regular_s.c
        type_decimal_minus.c
        type_decimal_plus.c
        type_decimal_priority.c
        type_decimal_regular.c
        type_decimal_size.c
        type_decimal_space.c
        type_decimal_zero.c
        type_float_minus.c
        type_float_plus.c
        type_float_priority.c
        type_float_regular.c
        type_float_size.c
        type_float_space.c
        type_float_zero.c
        type_hexadecimal_minus.c
        type_hexadecimal_priority.c
        type_hexadecimal_regular.c
        type_hexadecimal_size.c
        type_octal_minus.c
        type_octal_priority.c
        type_octal_regular.c
        type_octal_size.c
        type_octal_zero.c
        type_percent_minus.c
        type_percent_priority.c
        type_percent_regular.c
        type_pointer_regular.c
        width.c
        zero2.c)
